Mon May  5 15:45:04 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * config/mpich.mpb:

          Use MPI_ROOT instead of MPICH_ROOT.  This is in keeping with the
          generic-ness of the environment variables to allow drop-in
          replacements for different implementations.

        * config/openmpi.mpb:

          Added "requires += mpi".

        * modules/ProjectCreator.pm:

          Fixed a bug where files added through a directory would not be
          removed as duplicate if the generated files had the 'gendir' value
          set on them with one or more slash.  This only affected Windows
          project types.  

        * registry.pl:

          Fixed the registry value remove option.

Mon May  5 07:40:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * clone_build_tree.pl:
          Don't clone wb26/vxtest generated files, .d files and Makefiles
          in subdirectories

Fri May  2 11:57:32 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26dll.mpt:
          Added PPC85XXgnu buildspec

Thu May  1 14:32:09 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Added a template method to allow project creators to disable the
          "no useful targets" warning.

Wed Apr 30 18:59:45 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * config/openmpi.mpb:

          Added a very simple base project for Open MPI.

        * templates/make.mpd:

          Add the .NOTPARALLEL target if there is multiple files generated
          by a custom command.

Wed Apr 30 11:36:17 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed two different bugs:

          1) Using ^ with a wildcard did not function properly if the
             generated files were not already there.  Now, the wildcard
             expansion (prefixed by ^) is not done until the end and